--- a/animators/sass/style.sass
+++ b/animators/sass/style.sass
@@ -2745,13 +2745,13 @@ body
             width: 14px
             background: $yellow !important
     &__next, &__prev
-        top: 50%
+        top: 48%
     &__prev
         left: 0
-        transform: translate(-10%, -50%)
+        transform: translate(-0%, -50%)
     &__next
         right: 0
-        transform: translate(10%, -50%)
+        transform: translate(0%, -50%)
     &__slider
         overflow: hidden
         position: relative
@@ -2787,10 +2787,12 @@ body
             transform: rotate(60deg)
     &__review
         max-width: 900px
-        background-color: #fff
+        background-image: url(../img/review-bg.png)
+        background-size: contain
+        background-repeat: no-repeat
         padding: 35px 80px 60px
         border-radius: 15px
-        box-shadow: 0 3px 0 0 $yellow
+        margin-bottom: 5px
         display: flex
         align-items: center
         justify-content: center
