--- a/animators/sass/style.sass
+++ b/animators/sass/style.sass
@@ -52,13 +52,13 @@ body
 
 .small-btn
     border-radius: 30px
-    padding: 11px 24px
+    padding: 13px 24px
     font-size: 15px
     font-weight: 700
 
 .big-btn
     border-radius: 40px
-    padding: 11px 34px
+    padding: 13px 34px
     font-size: 22px
     font-weight: 700
 
@@ -260,7 +260,7 @@ body
         &-list
             max-height: 190px !important
         &-slider
-            max-width: 700px
+            max-width: 800px
             width: 100%
             overflow: hidden
             position: relative
@@ -706,7 +706,7 @@ body
         overflow: hidden
         margin-top: 30px
         position: relative
-        padding: 20px 20px 0px
+        padding: 20px 20px 20px
         .swiper-slide
             height: 100%
         &-prev, &-next
@@ -718,11 +718,26 @@ body
         &-next
             right: 0
             transform: translate(10%, -50%)
+    &__slide, .personages__offer
+        position: relative
+        button
+            width: 100%
+        &::after
+            content: ''
+            display: block
+            width: 100%
+            height: 15px
+            background-image: url(../img/shadow.png)
+            background-size: cover
+            background-repeat: no-repeat
+            position: absolute
+            bottom: 0
+            transform: translateY(150%)
+            left: 0
     &__slide
         padding: 30px 50px 20px
         border-radius: 10px
-        min-height: 380px
-        overflow: hidden
+        min-height: 390px
         background-repeat: no-repeat
         background-size: cover
         .questions__form-col
@@ -1238,7 +1253,7 @@ body
             margin-left: 20px
     &.gifts
         background-image: url('../img/gifts-bg-min.png')
-        padding: 100px 0px
+        padding: 100px 0px 40px
         background-position-x: -5px
         .section__program-old
             color: #fff
@@ -1312,7 +1327,7 @@ body
     .show-slider
         overflow: hidden
         padding: 0px 20px 40px 20px
-        margin-top: 30px
+        margin-top: 60px
         position: relative
     &__show-prev, &__show-next
         top: 50%
