--- a/animators/sass/style.sass
+++ b/animators/sass/style.sass
@@ -487,7 +487,7 @@ body
             top: -240px
             height: 270px
             width: 270px
-            background-image: url(../img/header_index.bgi.png)
+            background-image: url(../img/header_index-bgi.png)
             background-position: center
             background-repeat: no-repeat
             background-size: contain
