--- a/animators/sass/style.sass
+++ b/animators/sass/style.sass
@@ -921,7 +921,7 @@ body
             .section__benefit-circle-outer
                 box-shadow: 0 0 0px 0px #FFDB1E9e, 0 0 0px 0px #FFD22Bff
     &_purple
-        background-image: url('../img/purple-bg-min.jpg')
+        background-image: url('../img/purple-bg-min.png')
         background-size: cover
         background-position-x: -5px
         padding-top: 100px
@@ -1252,7 +1252,7 @@ body
         &-new
             margin-left: 20px
     &.gifts
-        background-image: url('../img/gifts-bg-min.jpg')
+        background-image: url('../img/gifts-bg-min.png')
         padding: 100px 0px 40px
         background-position-x: -5px
         .section__program-old
