--- a/animators/sass/style.sass
+++ b/animators/sass/style.sass
@@ -666,6 +666,15 @@ body
         position: relative
     &.animators
         position: relative
+        overflow: hidden
+    .animators
+        &-item
+            position: absolute
+            top: 200px
+        &-item1
+            left: -20px
+        &-item2
+            right: -80px
     .animators-bg
         position: absolute  
         z-index: -1
@@ -702,6 +711,11 @@ body
         max-width: 110px
         left: 1200px
         z-index: 2
+    &__item9
+        bottom: -50px
+        max-width: 110px
+        left: 200px
+        z-index: 2 !important
     &__slider
         overflow: hidden
         margin-top: 30px
@@ -1138,6 +1152,15 @@ body
             margin: 60px 0px
             display: flex
             justify-content: center
+    .programs
+        &__item1
+            position: absolute
+            left: -20px
+            top: 200px
+        &__item2
+            position: absolute
+            right: -100px
+            top: 600px
     .programs__bg
         position: absolute
         z-index: -1
@@ -1255,6 +1278,8 @@ body
         background-image: url('../img/gifts-bg-min.png')
         padding: 100px 0px 40px
         background-position-x: -5px
+        position: relative
+        z-index: 2
         .section__program-old
             color: #fff
     &__gift
@@ -1339,13 +1364,10 @@ body
         right: 0
     .show__bg
         position: absolute
-        left: 50%
         bottom: 10%
-        transform: translateX(-50%)
-        z-index: -1
+        left: 15%
     &.dlc
         margin-top: -60px
-        z-index: -1
         background-color: $yellow-bg
         padding: 130px 0px 100px
         &::after
@@ -1497,6 +1519,14 @@ body
 
 .review
     padding-top: 110px
+    &__1
+        position: absolute
+        top: 132px
+        left: -20px
+    &__2
+        top: 200px
+        position: absolute
+        right: -40px
     &__bg
         position: absolute
         z-index: -2
@@ -1675,6 +1705,9 @@ body
         top: 200px
     &__item4
         left: 1410px
+        top: 270px
+    &__item5
+        left: 210px
         top: 270px
     &__bg
         position: absolute
