--- a/animators/sass/style.sass
+++ b/animators/sass/style.sass
@@ -901,12 +901,13 @@ body
             &-outer
                 width: 110px
                 height: 110px
-                background-color: $acid-yellow
+                background-color: $acid-yellow 
                 border-radius: 50%
                 box-shadow: 0 0 0px 10px #FFDB1E9e, 0 0 0px 20px #FFD22Bff
             img
                 position: absolute
                 top: 50%
+                max-height: 140px
                 left: 50%
                 transform: translate(-50%, -40%)
         &-mask
