--- a/tanks/sass/style.sass
+++ b/tanks/sass/style.sass
@@ -442,6 +442,7 @@ body
     &__place
         font-size: 24px
         color: #E9E2BF
+        margin-right: 10px
         span
             font-size: 38px
     &__player
@@ -469,6 +470,7 @@ body
         color: $main_yellow
         display: inline-block
         position: relative
+        margin-left: 30px
         &::before
            content: ''
            display: inline-block
@@ -706,7 +708,7 @@ body
 .individual
     padding: 40px 0px
     background-image: url(../img/ind_bg.jpg)
-    background-position-y: center
+    background-position: center
     background-size: cover
     background-repeat: no-repeat
     position: relative
