--- a/tanks/sass/style.sass
+++ b/tanks/sass/style.sass
@@ -782,7 +782,7 @@ body
     top: 0
     right: 0
     background-color: #2D2F30
-    padding: 100px 0px 0px 20px
+    padding: 100px 20px 0px
     z-index: 20
     transform: translateX(100%)
     &.active
