--- a/tanks/sass/style.sass
+++ b/tanks/sass/style.sass
@@ -774,6 +774,8 @@ body
         &__list
             flex-wrap: wrap
             justify-content: space-around
+        &__item
+            margin-right: 30px
 
 .mobile
     position: fixed
