--- a/tanks/sass/style.sass
+++ b/tanks/sass/style.sass
@@ -322,6 +322,7 @@ body
 .rating
     background-image: url(../img/effects.png)
     background-size: cover
+    padding-top: 40px
     &__tab
         display: none
         opacity: 0
