--- a/red_button/sass/fonts.sass
+++ b/red_button/sass/fonts.sass
@@ -2,7 +2,7 @@
 
 @font-face 
     font-family: "Montserrat"
-    src: url("../fonts/Montserrat-Light.ttf") format("truetype")
+    src: url("../fonts/Montserrat-Light.otf") format("truetype")
     font-style: normal
     font-weight: 300
 
