--- a/red_button/sass/style.sass
+++ b/red_button/sass/style.sass
@@ -9,7 +9,7 @@ $main_red: #d31b21
     transition: all .2s ease-in-out 0s
 
 *
-    font-family: Montserrat, sans-serif
+    font-family: 'Montserrat', sans-serif
 
 html, body
     overflow-x: hidden
@@ -24,10 +24,26 @@ body
     max-width: 1230px
     margin: 0 auto
     padding: 0px 15px
+    z-index: 2
+    position: relative
 
 .text
     &__red
         color: $main_red
+    &__italic
+        font-style: italic
+
+.section
+    &__header
+        font-weight: 500
+        font-size: 54px
+        max-width: 680px
+        text-align: center
+        &-wrap
+            width: 100%
+            display: flex
+            align-items: center
+            justify-content: center
 
 .button
     display: inline-block
@@ -49,6 +65,8 @@ body
     flex-grow: 0
     padding: 25px 0px
     box-shadow: 0px 2px 15px 5px rgba(0, 0, 0, .2)
+    position: relative
+    z-index: 10
     &__wrap
         display: flex
         align-items: center
@@ -86,9 +104,9 @@ body
     &__link
         text-decoration: none
         color: #000
-        font-weight: 700
+        font-weight: 600
         font-size: 19px
-        font-family: exo2, serif
+        font-family: 'Exo 2', serif
         &:hover
             color: $main_red
 
@@ -96,15 +114,16 @@ body
     flex-grow: 1
 
 .banner
+    min-height: 1000px
+    position: relative
+    background-image: url(../img/banner_bg.jpg)
+    background-size: contain
+    background-repeat: no-repeat
     &__wrap
         display: flex
         flex-direction: column
         align-items: center
-    &__header
-        font-weight: 500
-        font-size: 54px
-        max-width: 680px
-        text-align: center
+        padding-top: 200px
     &__text
         font-size: 19px
         font-weight: 300
@@ -141,5 +160,39 @@ body
             font-weight: 700
             max-width: 270px
             text-align: center
+
+.how
+    padding-top: 50px
+    &__items
+        display: flex
+        flex-wrap: wrap
+        justify-content: flex-start
+
+.item
+    margin: 40px 45px 0px
+    display: flex
+    flex-direction: column
+    align-items: center
+    &__ico
+        height: 124px
+        width: 124px
+        border-radius: 50%
+        position: relative
+        background-color: #fff
+        box-shadow: 0 0 0 10px #e4e4e4
+    &__img
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+    &__header
+        font-size: 22px
+        font-weight: 700
+        text-align: center
+        margin: 25px 0px 20px
+    &__text
+        max-width: 280px
+        font-weight: 300
+
 .footer
     flex-grow: 0
