--- a/red_button/sass/style.sass
+++ b/red_button/sass/style.sass
@@ -231,7 +231,7 @@ body
     background-image: url(../img/banner_bg.jpg)
     background-size: contain
     background-repeat: no-repeat
-    background-position: center
+    background-position: center top
     z-index: 2
     &__wrap
         display: flex
