--- a/red_button/sass/style.sass
+++ b/red_button/sass/style.sass
@@ -228,11 +228,38 @@ body
 .banner
     min-height: 1000px
     position: relative
-    background-image: url(../img/banner_bg.jpg)
-    background-size: contain
+    background-color: #fff
+    background-image: url(../img/banner_bg4.jpg)
+    background-size: cover
+    background-position: center
     background-repeat: no-repeat
-    background-position: center top
     z-index: 2
+    &::after
+        display: block
+        height: 150px
+        position: absolute
+        content: ''
+        background-image: url(../img/banner_bg3.png)
+        background-repeat: no-repeat
+        background-size: cover
+        width: 100%
+        bottom: -60px
+        left: 0
+    &__bg1
+        top: 0
+        left: 0
+        max-width: 20vw
+        position: absolute
+    &__bg2
+        position: absolute
+        max-width: 35vw
+        bottom: 1vh
+        right: 10%
+
+    &__bg3
+        bottom: 0px
+        left: 0
+        position: absolute
     &__wrap
         display: flex
         flex-direction: column
@@ -276,23 +303,103 @@ body
             max-width: 270px
             text-align: center
 
+.question
+    position: relative
+    display: inline-block
+    height: 22px
+    width: 22px
+    border-radius: 50%
+    text-align: center
+    line-height: 22px
+    font-weight: 500
+    font-size: 15px
+    color: #fff
+    background-color: #bababa
+    margin-left: 5px
+    &__tip
+        position: absolute
+        visibility: hidden
+        display: block
+        opacity: 0
+        top: 0
+        left: 80%
+        z-index: 10
+        width: 400px
+        background-color: $main_red
+        padding: 40px
+        font-size: 15px
+        font-weight: 500
+        transform: translate(-50%, -103%)
+        color: #fff
+    &:hover + .question__tip
+        visibility: visible
+        opacity: 1
+    &:hover
+        background-color: $main_red
+        cursor: pointer
+        .question__tip
+            visibility: visible
+            opacity: 1
+        &::after
+            content: ''
+            display: inline-block
+            position: absolute
+            top: 0
+            left: 50%
+            transform: translate(-50%, -50%)
+            border: 6px solid transparent
+            border-top: 6px solid $main_red
+
 .how
     padding-top: 60px
     padding-bottom: 90px
     position: relative
     box-shadow: 0 2px 8px 1px rgba(0, 0, 0, .2)
-    margin-top: -7px
+    margin-top: -10px
     &__bg
         position: absolute
         right: 0
         bottom: 0
-        max-height: 650px
-        height: auto
+        max-width: 40vw
     &__items
         display: flex
         flex-wrap: wrap
         justify-content: flex-start
         margin-top: 40px
+    &__tip
+        max-width: 300px
+        position: relative
+        background-color: $main_red
+        border-radius: 10px
+        padding: 20px 25px
+        margin-top: 20px
+        transform: translate(-10%, 25%)
+        max-height: 170px
+        z-index: 2
+        &-bg
+            position: absolute
+            width: 100%
+            left: 0
+            top: 0
+            z-index: -1
+            height: 100%
+            object-fit: contain
+        p
+            color: #fff
+            font-size: 14px
+            line-height: 24px
+        &::after
+            content: ''
+            display: block
+            position: absolute
+            right: 0
+            top: 10px
+            transform: translate(100%, 60%)
+            border: 8px solid transparent
+            border-left: 8px solid $main_red
+            border-top: 8px solid $main_red
+
+
 
 .item
     margin: 60px 45px 0px
@@ -353,41 +460,6 @@ body
             background-position: center
             background-repeat: no-repeat
 
-.question
-    position: relative
-    display: inline-block
-    height: 22px
-    width: 22px
-    border-radius: 50%
-    text-align: center
-    line-height: 22px
-    font-weight: 500
-    font-size: 15px
-    color: #fff
-    background-color: #bababa
-    margin-left: 5px
-    &__tip
-        position: absolute
-        visibility: hidden
-        display: block
-        opacity: 0
-        top: 0
-        left: 80%
-        transform: translate(-50%, -82%)
-        z-index: 10
-        width: 400px
-        background-color: $main_red
-        padding: 40px
-        font-size: 15px
-        font-weight: 500
-        color: #fff
-    &:hover + .question__tip
-        visibility: visible
-        opacity: 1
-    &:hover
-        background-color: $main_red
-        cursor: pointer
-
 .why
     background-image: url(../img/why_bg.jpg)
     background-repeat: no-repeat
@@ -398,8 +470,6 @@ body
         display: flex
         flex-wrap: wrap
         justify-content: space-around
-        .question__tip
-            transform: translate(-50%, -92%)
 
 .agit
     background-image: url(../img/agit_bg.jpg)
@@ -520,9 +590,11 @@ body
     padding: 80px 0px 160px
     position: relative
     overflow: hidden
-    background-image: url(../img/price__bg2.jpg)
-    background-position: right bottom
-    background-repeat: no-repeat
+    &__bg2
+        position: absolute
+        bottom: 0
+        right: 0
+        max-width: 30vw
     &__bg
         position: absolute
         max-width: 30vw
@@ -801,6 +873,7 @@ body
         z-index: 1000
         background-color: rgba(195, 195, 195, .7)
         display: none
+        padding: 10px
         &.active
             display: flex
     &__body
