--- a/red_button/sass/media.sass
+++ b/red_button/sass/media.sass
@@ -1,3 +1,7 @@
+@media screen and ( min-width: 470px )
+    .question
+        position: relative
+    
 @media screen and ( max-width: 1600px )
     .banner
         min-height: auto
@@ -330,6 +334,17 @@
             justify-content: flex-start
         &__copyright
             text-align: left
+
+    .question
+        &::after, &:hover::after
+            display: none
+        &__tip
+            width: 100%
+            left: 0
+            top: auto
+            bottom: 26px
+            transform: translate(0%, 0%)
+
 
 @media screen and ( max-width: 400px )
     .mobile
